# linerpsu

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  README.md  band_okvs_adapter.cc  band_okvs_adapter.h  bench_items.h  benchmark_stats.h  bokvs.cc  bokvs.h  coproto_asio_globals.h  cuckoohash.h  debug_logging.h  eqote.cc  eqote.h  gmw.h  local_comm_stats.h  main.cc  oc_compat_types.h  opprf_hash.h  opprf_mask_bench.cc  oprf.cc  oprf.h  own_opprf.cc  own_opprf.h  peqt_coproto_globals.cc  peqt_gmw.h  peqt_lib.cc  peqtresults  peqtresults1  permuted_peqt.h  ps.cc  ps.h  psu.cc  psu.h  psu_bench_config.h  psuresults  psuresults1  rr22_oprf.cc  (+10 more)
GMW/: Circuit.cpp  Circuit.h  Defines.h  Gmw.cpp  Gmw.h  SilentTripleGen.cpp  SilentTripleGen.h  config.h
bandokvs/: band.cc  band.h  band_okvs.cc  band_okvs.h  uint.h  utils.cc  utils.h
okvs/: BUILD.bazel  aes_crhash.cc  aes_crhash.h  aes_crhash_test.cc  baxos.cc  baxos.h  baxos_test.cc  dense_mtx.cc  dense_mtx.h  galois128.cc  galois128.h  galois128_test.cc  main.cc  paxos.cc  paxos.h  paxos_hash.cc  paxos_hash.h  paxos_hash_test.cc  paxos_test.cc  paxos_utils.cc  paxos_utils.h  simple_index.cc  simple_index.h
results/HLL25/: summary_simple.csv
results/Ours/: component_breakdown.csv  mask_generation_opprf_compare.csv
results/Ours/asymmetric_20260528_134557/: summary.csv  table.csv
results/Ours/hash_opprf_okvs_20260528_142249/: summary.csv  table.csv
results/Ours/psu_net_20260526_180550/: summary.csv
results/Ours/psu_okvs_20260528_143241/: summary.csv  table.csv
tools/: patch_workspace.py
