

load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])


yacl_cc_binary(
    name = "ourpsu",
    srcs = [
        "main.cc",
        "utils.h",
        "cuckoohash.h",
        "psu.h",
        "psu.cc",
        "bokvs.h",
        "bokvs.cc",
        "ps.h",
        "ps.cc",
        "eqote.h",
        "eqote.cc",
        "oprf.cc",
        "oprf.h"
    ],
    deps = [
        "//examples/linerpsu/okvs:baxos",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/base:int128",
        "//yacl/math/f2k:f2k",
        "//examples/linerpsu/okvs:galois128",
        "//yacl/crypto/hash:blake3",
        "//yacl/utils:parallel",
        "//yacl/crypto/hash:hash_utils",
        "//yacl/crypto/rand:rand",
        "//yacl/kernel/algorithms:softspoken_ote"
    ],
    copts = [
        "-maes", "-mpclmul", "-mavx2", "-fopenmp", "-O3", "-std=c++20", "-march=native", "-mavx512f",
        "-I/usr/local/include",  
    ],
    linkopts = [
        "-fopenmp", "-O3", "-L/usr/local/lib", "-lcryptoTools",
    ],
)


    