load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])

yacl_cc_binary(
    name = "ourpsu",
    srcs = [
        "main.cc",
        "utils.h",
        "cuckoohash.h",
        "psu.h",
        "psu.cc",
        "bokvs.h",
        "bokvs.cc",
        "ps.h",
        "ps.cc",
        "eqote.h",
        "eqote.cc",
        "oprf.h",
        "oprf.cc",
        "gmw.h",
    ],
    deps = [
        "//examples/linerpsu/okvs:baxos",
        "//examples/linerpsu/okvs:galois128",
        "//yacl/base:int128",
        "//yacl/crypto/hash:blake3",
        "//yacl/crypto/hash:hash_utils",
        "//yacl/crypto/rand:rand",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:softspoken_ote",
        "//yacl/math/f2k:f2k",
        "//yacl/utils:parallel",
    ],
    defines = [
        "LIBDIVIDE_AVX2",
    ],
    copts = [
        "-O3",
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-fopenmp",
        "-maes",
        "-mbmi2",
        "-mpclmul",
        "-msse4.1",
        "-mavx",
        "-mavx2",
        "-I/usr/local/include/secureJoin",
    ],
    linkopts = [
        "-fopenmp",
        "-L/usr/local/lib",
        "-Wl,--start-group",
        "-lsecureJoin",
        "-llibOTe",
        "-lcryptoTools",
        "-lmacoro",
        "-lcoproto",
        "-Wl,--end-group",
        "-lsodium",
        "-lpthread",
    ],
)
